--- a/SitioMain/templates/index.html
+++ b/SitioMain/templates/index.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -7,7 +9,7 @@
     <meta name="description" content="" />
     <meta name="author" content="Leandro Gaston Luna" />
     <title>That's No Moon</title>
-    <link rel="icon" type="image/x-icon" href="static/assets/img/death-star.png" />
+    <link rel="icon" type="image/x-icon" href="{% static '/assets/img/death-star.png' %}" />
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
@@ -15,14 +17,14 @@
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
         rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="static/css/styles.css" rel="stylesheet" />
+    <link href="{% static '/css/styles.css' %}" rel="stylesheet" />
 </head>
 
 <body id="page-top">
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container px-4 px-lg-5">
-            <a class="navbar-brand" href=index.html>HOME</a>
+            <a class="navbar-brand" href="">HOME</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -31,9 +33,9 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href=>SABERS</a></li>
-                    <li class="nav-item"><a class="nav-link" href=>CRISTALES</a></li>
-                    <li class="nav-item"><a class="nav-link" href=>COMPONENTES</a></li>
+                    <li class="nav-item"><a class="nav-link" href="">SABERS</a></li>
+                    <li class="nav-item"><a class="nav-link" href="">CRISTALES</a></li>
+                    <li class="nav-item"><a class="nav-link" href="">COMPONENTES</a></li>
                     <li class="nav-item">
                         <div class="dropdown-center">
                             <button class="btn btn-dark dropdown-toggle" type="button" data-bs-toggle="dropdown"
@@ -77,7 +79,7 @@
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
-    <script src="static/js/scripts.js"></script>
+    <script src="{% static '/js/scripts.js' %}"></script>
     <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
 </body>
 
