correcciones html y favicon

--- a/SitioMain/templates/index.html
+++ b/SitioMain/templates/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="" />
     <meta name="author" content="Leandro Gaston Luna" />
     <title>That's No Moon</title>
-    <link rel="icon" type="image/x-icon" href="{% static '/assets/img/death-star.png' %}" />
+    <link rel="icon" type="x-icon" href="{% static '/assets/death-star.png' %}" />
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
