template padre creado y modelos stock

--- a/SitioMain/templates/base.html
+++ b/SitioMain/templates/base.html
@@ -24,8 +24,6 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container px-4 px-lg-5">
-            
-            <!-- en los links se usa el nombre que le asignamos a a url del path -->
             <a class="navbar-brand" href="{% url 'inicio' %}">HOME</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
@@ -58,12 +56,16 @@
             <div class="d-flex justify-content-center">
                 <div class="text-center">
                     <h1 class="mx-auto my-5 text-uppercase">THAT'S NO MOON</h1>
-                    <h2 class="text-white-50 mx-auto mt-0 mb-5">Hace mucho tiempo en un sitio muy muy lejano...</h2>
-                    <a class="btn btn-primary" href="">Nuestros Productos</a>
                 </div>
             </div>
         </div>
     </header>
+    
+    <main>
+        {% block MainContent %}
+        
+        {% endblock %}         
+    </main>
 
     <!-- Contact-->
     <section class="contact-section bg-black">
