--- a/SitioMain/templates/base.html
+++ b/SitioMain/templates/base.html
@@ -14,10 +14,12 @@
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+    <link
+        href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
         rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="{% static '/css/styles.css' %}" rel="stylesheet" />
+    <link href="{% static '/css/arrow.css' %}" rel="stylesheet" />
 </head>
 
 <body id="page-top">
@@ -33,9 +35,9 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="">SABERS</a></li>
-                    <li class="nav-item"><a class="nav-link" href="">CRISTALES</a></li>
-                    <li class="nav-item"><a class="nav-link" href="">COMPONENTES</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'sabers' %}">SABERS</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'crystals' %}">CRISTALES</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'componentes' %}">COMPONENTES</a></li>
                     <li class="nav-item">
                         <div class="dropdown-center">
                             <button class="btn btn-dark dropdown-toggle" type="button" data-bs-toggle="dropdown"
@@ -53,19 +55,19 @@
     <!-- Masthead-->
     <header class="masthead">
         <div class="container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center">
-            <div class="d-flex justify-content-center">
-                <div class="text-center">
-                    <h1 class="mx-auto my-5 text-uppercase">THAT'S NO MOON</h1>
-                </div>
+            <div class="d-flex justify-content-center text-center">
+                <h1 class="mx-auto my-5 text-uppercase">THAT'S NO MOON</h1>
+
+                <div class="arrow"></div>
             </div>
         </div>
     </header>
-    
-    <main>
+
+    <section class="contact-section bg-black text-center text-white-50" style="margin:0px">
         {% block MainContent %}
-        
-        {% endblock %}         
-    </main>
+
+        {% endblock %}
+    </section>
 
     <!-- Contact-->
     <section class="contact-section bg-black">
