--- a/SitioMain/templates/index.html
+++ b/SitioMain/templates/index.html
@@ -35,9 +35,9 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="">SABERS</a></li>
-                    <li class="nav-item"><a class="nav-link" href="">CRISTALES</a></li>
-                    <li class="nav-item"><a class="nav-link" href="">COMPONENTES</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'sabers' %}">SABERS</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'crystals' %}">CRISTALES</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'componentes' %}">COMPONENTES</a></li>
                     <li class="nav-item">
                         <div class="dropdown-center">
                             <button class="btn btn-dark dropdown-toggle" type="button" data-bs-toggle="dropdown"
