--- a/SitioMain/static/css/arrow.css
+++ b/SitioMain/static/css/arrow.css
@@ -1,3 +1,6 @@
+.section-forms{
+  margin: 50px !important;
+}
 .arrow,
 .arrow:before{
   position: absolute;
@@ -8,7 +11,7 @@
   height: 40px;
   top: 78%;
   margin: -20px 0 0 -20px;
-  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
   border-left: none;
   border-top: none;
   border-right: 2px #fff solid;
