--- a/SitioMain/templates/base-forms.html
+++ b/SitioMain/templates/base-forms.html
@@ -52,18 +52,8 @@
             </div>
         </div>
     </nav>
-    <!-- Masthead-->
-    <header class="masthead">
-        <div class="container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center">
-            <div class="d-flex justify-content-center text-center">
-                <h1 class="mx-auto my-5 text-uppercase">THAT'S NO MOON</h1>
 
-                <div class="arrow"></div>
-            </div>
-        </div>
-    </header>
-
-    <section class="contact-section bg-black text-white-50" style="margin:0px">
+    <section class="contact-section bg-black text-white-50" style="padding:200px">
         {% block MainContent %}
 
         {% endblock %}
