--- a/SitioMain/templates/crystals.html
+++ b/SitioMain/templates/crystals.html
@@ -7,10 +7,26 @@
 
 <div class="text-center">
     <h1>Nuestros Productos:</h1>
-
+    <br>
     <h3> KYBER CRYSTALS </h3>
 </div>
 <br><br>
-<a class="btn btn-primary" href="{% url 'nuevo_crystal' %}" style="margin: 20px;">Agregar</a>
+{% for i in productos %}
+<div>
+    <!-- imprimo el nombre del prod (como este definido en el modelo) -->
+    <li>{{i}} </li>
+    <p>Color: {{i.color}}cm.</p>
+    <p>${{i.precio}}</p>
+    <a href=""><button type="button" class="btn btn-sm btn-outline-success">
+        Editar </button></a>
+   
+   <a href=""><button type="button" class="btn btn-outline-danger">
+        Eliminar</button></a>
+   
+   <br><br>
+</div>
+{% endfor %}
+<br><br>
+<a class="btn btn-primary" href="{% url 'crear_crystal' %}" style="margin: 20px;">Agregar</a>
 
 {% endblock MainContent %}
