--- a/SitioMain/templates/sabers.html
+++ b/SitioMain/templates/sabers.html
@@ -4,12 +4,33 @@
 {% load static %}
 <!-- ingresamos el contenido que cambiara en las distintas paginas 'hijas' -->
 {% block MainContent %}
+
 <div class="text-center">
     <h1>Nuestros Productos:</h1>
-
+    <br>
     <h3> SABERS </h3>
 </div>
+
 <br><br>
-<a class="btn btn-primary" href="{% url 'nuevo_sable' %}" style="margin: 20px;">Agregar</a>
+
+{% for i in productos %}
+<div>
+    <!-- imprimo el nombre del prod (como este definido en el modelo) -->
+    <li>{{i}} </li>
+    <p>${{i.precio}}</p>
+    <p>{{i.medida}}cm.</p>
+    <a href=""><button type="button" class="btn btn-sm btn-outline-success">
+         Editar </button></a>
+    
+    <a href=""><button type="button" class="btn btn-outline-danger">
+         Eliminar</button></a>
+    
+    <br><br>
+</div>
+{% endfor %}
+
+<!-- con %url% llamamos a la view del nombre que le pasamos en el doc urls.py -->
+<a class="btn btn-primary" href="{% url 'crear_sable' %}" style="margin: 20px;">Agregar</a>
+<br><br>
 
 {% endblock MainContent %}
