creamos mostrar_productos y busqueda

--- a/SitioMain/templates/index.html
+++ b/SitioMain/templates/index.html
@@ -59,7 +59,7 @@
                 <div class="text-center">
                     <h1 class="mx-auto my-5 text-uppercase">THAT'S NO MOON</h1>
                     <h2 class="text-white-50 mx-auto mt-0 mb-5">Hace mucho tiempo en un sitio muy muy lejano...</h2>
-                    <a class="btn btn-primary" href="">Nuestros Productos</a>
+                    <a class="btn btn-primary" href="{% url 'nuestros_productos' %}">Nuestros Productos</a>
                 </div>
             </div>
         </div>
