--- a/SitioMain/templates/sabers.html
+++ b/SitioMain/templates/sabers.html
@@ -16,9 +16,11 @@
 {% for i in productos %}
 <div>
     <!-- imprimo el nombre del prod (como este definido en el modelo) -->
-    <li>{{i}} </li>
-    <p>${{i.precio}}</p>
-    <p>{{i.medida}}cm.</p>
+    <li> Producto: {{i.nombre}} </li>
+    <p> ${{i.precio}} </p>
+    <p> {{i.medida}}cm </p>
+    <p> Stock disponible: {{i.stock}} </p>
+
     <a href=""><button type="button" class="btn btn-sm btn-outline-success">
          Editar </button></a>
     
