fx eliminar y agregar funcionan - arreglar buscar

--- a/SitioMain/templates/nuestros_productos.html
+++ b/SitioMain/templates/nuestros_productos.html
@@ -29,9 +29,9 @@
 <h2> Busqueda de Productos: </h2>
 <br>
 <form action="/stock/buscar_producto/" method="GET" id="buscar_producto">
-    <p>Ingrese personaje: <input type="text" name="nombre" ></p>
+    <p>Ingrese personaje: <input type="text" name="nombre"></p>
     <br>
-    <input type="submit" value="Buscar" name="nombre">
+    <input type="submit" value="Buscar">
     <br>
 </form>
 
