--- a/SitioMain/templates/componentes.html
+++ b/SitioMain/templates/componentes.html
@@ -23,7 +23,7 @@
     <a href=""><button type="button" class="btn btn-sm btn-outline-success">
         Editar </button></a>
    
-   <a href=""><button type="button" class="btn btn-outline-danger">
+   <a href="{% url 'eliminar_componente' i.tipo i.nombre %}"><button type="button" class="btn btn-outline-danger">
         Eliminar</button></a>
    
    <br><br>
