--- a/SitioMain/templates/crystals.html
+++ b/SitioMain/templates/crystals.html
@@ -23,7 +23,7 @@
     <a href=""><button type="button" class="btn btn-sm btn-outline-success">
         Editar </button></a>
    
-   <a href=""><button type="button" class="btn btn-outline-danger">
+   <a href="{% url 'eliminar_crystal' i.nombre i.color %}"><button type="button" class="btn btn-outline-danger">
         Eliminar</button></a>
    
    <br><br>
