--- a/SitioMain/templates/resultados_busqueda.html
+++ b/SitioMain/templates/resultados_busqueda.html
@@ -14,8 +14,8 @@
         <div>
             <!-- imprimo el nombre del prod (como este definido en el modelo) -->
             <h4> Producto: {{p.nombre}} </h4>
-            <h5> ${{p.stock}} </h5>
-            <p> {{p.precio}}. </p>
+            <h5> $ {{p.precio}} </h5>
+            <p> Disponibles: {{p.stock}}. </p>
             <p> {{p.descripcion}} </p>
             <br><br>
         </div>
