--- a/SitioMain/templates/sabers.html
+++ b/SitioMain/templates/sabers.html
@@ -24,7 +24,7 @@
     <a href=""><button type="button" class="btn btn-sm btn-outline-success">
          Editar </button></a>
     
-    <a href=""><button type="button" class="btn btn-outline-danger">
+    <a href="{% url 'eliminar_sable' i.nombre %}"><button type="button" class="btn btn-outline-danger">
          Eliminar</button></a>
     
     <br><br>
