fx buscar arreglada y update estilos

--- a/SitioMain/templates/base-forms.html
+++ b/SitioMain/templates/base-forms.html
@@ -53,7 +53,7 @@
         </div>
     </nav>
 
-    <section class="contact-section bg-black text-white-50" style="padding:200px">
+    <section class="contact-section bg-black text-white-50" style="padding: 200px 10vw;">
         {% block MainContent %}
 
         {% endblock %}
