--- a/SitioMain/templates/base.html
+++ b/SitioMain/templates/base.html
@@ -63,7 +63,7 @@
         </div>
     </header>
 
-    <section class="contact-section bg-black text-white-50" style="margin:0px">
+    <section class="contact-section bg-black text-white-50" style="margin:0px;padding: 0px 10vw;">
         {% block MainContent %}
 
         {% endblock %}
