--- a/SitioMain/templates/nuestros_productos.html
+++ b/SitioMain/templates/nuestros_productos.html
@@ -31,7 +31,7 @@
 <form action="/stock/buscar_producto/" method="GET" id="buscar_producto">
     <p>Ingrese personaje: <input type="text" name="nombre"></p>
     <br>
-    <input type="submit" value="Buscar">
+    <input type="submit" value="Buscar" class="btn btn-sm btn-outline-success">
     <br>
 </form>
 
