--- a/SitioMain/templates/index.html
+++ b/SitioMain/templates/index.html
@@ -14,7 +14,8 @@
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+    <link
+        href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
         rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="{% static '/css/styles.css' %}" rel="stylesheet" />
@@ -24,7 +25,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container px-4 px-lg-5">
-            
+
             <!-- en los links se usa el nombre que le asignamos a a url del path -->
             <a class="navbar-brand" href="{% url 'inicio' %}">HOME</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse"
@@ -43,8 +44,10 @@
                             <button class="btn btn-dark dropdown-toggle" type="button" data-bs-toggle="dropdown"
                                 aria-expanded="false"> MI PERFIL </button>
                             <ul class="dropdown-menu">
-                                <li><button class="dropdown-item" type="button" href=""> LOG IN </button></li>
-                                <li><button class="dropdown-item" type="button" href=""> SIGN UP </button></li>
+                                <li><a class="dropdown-item" type="button" href="{% url 'LogIn' %}"> LOG IN </a></li>
+                                <li><a class="dropdown-item" type="button" href="{% url 'Registro' %}"> SIGN UP </a>
+                                </li>
+                                <li><a class="dropdown-item" type="button" href="{% url 'LogOut' %}"> LOG OUT </a></li>
                             </ul>
                         </div>
                     </li>
@@ -60,9 +63,14 @@
                     <h1 class="mx-auto my-5 text-uppercase">THAT'S NO MOON</h1>
                     <h2 class="text-white-50 mx-auto mt-0 mb-5">Hace mucho tiempo en un sitio muy muy lejano...</h2>
                     <a class="btn btn-primary" href="{% url 'nuestros_productos' %}">Nuestros Productos</a>
+                    {% if mensaje %}
+                    <br><br><br><br>
+                    <h4 class="text-center text-white-50 mx-auto mt-0 mb-5">{{mensaje}}</h4>
+                    {% endif %}
                 </div>
             </div>
         </div>
+
     </header>
 
     <!-- Contact-->
