--- a/SitioMain/templates/base.html
+++ b/SitioMain/templates/base.html
@@ -35,9 +35,13 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto">
+                    {% if user.is_staff %}
                     <li class="nav-item"><a class="nav-link" href="{% url 'sabers' %}">SABERS</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'crystals' %}">CRISTALES</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'componentes' %}">COMPONENTES</a></li>
+                    {% else %}
+                    <li class="nav-item"><a class="nav-link" href="{% url 'nuestros_productos' %}">PRODUCTOS</a></li>
+                    {% endif %}
                     <li class="nav-item">
                         <div class="dropdown-center">
                             <button class="btn btn-dark dropdown-toggle" type="button" data-bs-toggle="dropdown"
