--- a/SitioMain/templates/login.html
+++ b/SitioMain/templates/login.html
@@ -20,5 +20,10 @@
     <input class="btn btn-primary" type="submit" value="Iniciar Sesion" style="padding:10px 50px">
     <br>
 </form>
+<br><br><br>
+<h5>¿Todavía no sos parte de la orden?</h5>
+<br>
+<a class="btn btn-warning" href="{% url 'Registro' %}"  style="padding:10px 50px">¡Registrate!</a>
+<br>
 
 {% endblock MainContent %}
