--- a/SitioMain/templates/crystals.html
+++ b/SitioMain/templates/crystals.html
@@ -11,6 +11,9 @@
     <h3> KYBER CRYSTALS </h3>
 </div>
 <br><br>
+{% if productos.count == 0 %}
+<h4>Aún no se han agregado lightsabers.</h4>
+{% else %}
 
 {% for i in productos %}
 <div>
@@ -30,6 +33,7 @@
 </div>
 {% endfor %}
 
+{% endif %}
 <br><br>
 <a class="btn btn-primary" href="{% url 'crear_crystal' %}" style="margin: 50px 20px;">Agregar</a>
 
