--- a/SitioMain/templates/nuestros_productos.html
+++ b/SitioMain/templates/nuestros_productos.html
@@ -16,18 +16,21 @@
 {% else %}
 
 <div id="productos-muestra-container">
-    {% for producto in lista %}
-    <div>
-        <!-- imprimo el nombre del prod (como este definido en el modelo) -->
-        <h4> Producto: {{producto.nombre}} </h4>
-        <h5> ${{producto.precio}} </h5>
-        <p> {{producto.descripcion}} </p>
-        <p> Disponibles: {{producto.stock}} </p>
-
-        <br><br>
-    </div>
+    {% for i in lista %}
+        {% for producto in i %}
+        <div>
+            <!-- imprimo el nombre del prod (como este definido en el modelo) -->
+            <h4> Producto: {{producto.tipo}} {{producto.nombre}} {{producto.color}}</h4>
+            <h5> ${{producto.precio}} </h5>
+            <p> {{producto.descripcion}} </p>
+            <p> Disponibles: {{producto.stock}} </p>
+                
+            <a href="{% url 'comprar_producto' %}"><button type="button" class="btn btn-sm btn-primary">
+                Comprar </button></a>
+            <br><br><br><br>
+        </div>
+        {% endfor %}
     {% endfor %}
-
     <br><br>
     <aside id="busqueda-container">
         <h3> Busqueda de Productos: </h3>
