--- a/SitioMain/templates/resultados_busqueda.html
+++ b/SitioMain/templates/resultados_busqueda.html
@@ -9,17 +9,19 @@
 
     {% if producto %}
 
-    {% for p in producto %}
-    <div>
-        <!-- imprimo el nombre del prod (como este definido en el modelo) -->
-        <h4> Producto: {{p.nombre}} </h4>
-        <h5> $ {{p.precio}} </h5>
-        <p> Disponibles: {{p.stock}}. </p>
-        <p> {{p.descripcion}} </p>
-        <br><br>
-    </div>
+    {% for i in producto%}
+        {% for p in i %}
+        <div>
+            <!-- imprimo el nombre del prod (como este definido en el modelo) -->
+            <h4> Producto: {{p.tipo}} {{p.nombre}} {{p.color}}</h4>
+            <h5> ${{p.precio}} </h5>
+            <p> Disponibles: {{p.stock}} </p>
+            <p> {{p.descripcion}} </p>
+            <br><br>
+        </div>
+        {% endfor %}
     {% endfor %}
-
+    
     {% else %}
 
     <span style="color: red;">Producto sin stock!</span>
