--- a/SitioMain/templates/cambiar_contrasenia.html
+++ b/SitioMain/templates/cambiar_contrasenia.html
@@ -15,14 +15,20 @@
 
 <form method="POST"> {% csrf_token %}
 
-    {{ form.new_password1.erros }}
-    <label for="id_new_password1">Nueva contraseña:</label> 
+    {{ form.old_password.errors }}
+    <label for="id_old_password">Contraseña actual:</label>
+    {{ form.old_password }}
+    <br>
+    <br>
+
+    {{ form.new_password1.errors }}
+    <label for="id_new_password1">Nueva contraseña:</label>
     {{ form.new_password1 }}
     <br>
     <br>
-   
-    {{ form.new_password2.erros }}
-    <label for="id_new_password2">Confirmar contraseña:</label>
+
+    {{ form.new_password2.errors }}
+    <label for="id_new_password2">Confirmar nueva contraseña:</label>
     {{ form.new_password2 }}
     <br>
     <br>
