app usuarios agregada sin errores (exc img)

--- a/SitioMain/templates/editar_perfil.html
+++ b/SitioMain/templates/editar_perfil.html
@@ -5,28 +5,24 @@
 <!-- ingresamos el contenido que cambiara en las distintas paginas 'hijas' -->
 {% block MainContent %}
 
-<h2>Formulario - Editar Perfil: </h2>
-<h3>Usuario: {{usuario}}</h3>
+<h2>Editar Perfil: </h2>
+<h3>Usuario: {{request.user.perfil.usuario}}</h3>
 <br>
-
-{% if mi_formulario.error %}
-<p style="color:red"> Datos Invalidos! </p>
-{% endif %}
 
 <!-- action-> direccion donde se dirige una vez completo el form -->
 <form action="" method="POST"> {% csrf_token %}
 
     <table>
-        {{mi_formulario.as_table}}
+        {{form.as_table}}
     </table>
 
     <br>
-    <a class="btn btn-primary" href="{% url 'cambiar_contrasenia' %}" style="padding:10px 50px">Cambiar contraseña</a>
+    <a class="btn btn-secondary" href="{% url 'cambiar_contrasenia' %}" style="padding:10px 50px">Cambiar contraseña</a>
     <br>
 
     <br>
-    <input class="btn btn-primary" type="submit" value="Guardar" style="padding:10px 50px">
+    <button class="btn btn-primary" type="submit" style="padding:10px 50px">Guardar</button>
     <br>
 </form>
 
-{% endblock MainContent %}
+{% endblock %}
