--- a/SitioMain/templates/base.html
+++ b/SitioMain/templates/base.html
@@ -54,8 +54,7 @@
                                 <li><a class="dropdown-item text-center" type="button" href="{% url 'Registro' %}"> SIGN UP </a>
                                 </li>
                                 {% else %}
-                                <li><a class="text-center dropdown-item" href="#">{{request.user.username}}</a></li>
-                                <li><a class="text-center dropdown-item" href="{% url 'editar_perfil' %}">Editar Perfil</a></li>
+                                <li><a class="text-center dropdown-item" href="{% url 'ver perfil' %}">{{request.user.username}}</a></li>
                                 <li><a class="dropdown-item text-center" type="button" href="{% url 'LogOut' %}"> LOG OUT </a></li>
                                 {% endif %}
                             </ul>
