--- a/SitioMain/templates/nuestros_productos.html
+++ b/SitioMain/templates/nuestros_productos.html
@@ -25,8 +25,8 @@
             <p> {{producto.descripcion}} </p>
             <p> Disponibles: {{producto.stock}} </p>
                 
-            <a href="{% url 'comprar_producto' %}"><button type="button" class="btn btn-sm btn-primary">
-                Comprar </button></a>
+            <!-- <a href="{% url 'comprar_producto' %}"><button type="button" class="btn btn-sm btn-primary">
+                Comprar </button></a> -->
             <br><br><br><br>
         </div>
         {% endfor %}
