modelo cliente y transaccion agregados, con VBC

--- a/SitioMain/templates/crear_perfil.html
+++ b/SitioMain/templates/crear_perfil.html
@@ -9,7 +9,7 @@
 <br>
 
 <!-- action-> direccion donde se dirige una vez completo el form -->
-<form action="" method="POST"> {% csrf_token %}
+<form action="" method="POST" enctype="multipart/form-data"> {% csrf_token %}
 
     <table>
         {{form.as_table}}
