--- a/SitioMain/templates/base.html
+++ b/SitioMain/templates/base.html
@@ -39,6 +39,7 @@
                     <li class="nav-item"><a class="nav-link" href="{% url 'sabers' %}">SABERS</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'crystals' %}">CRISTALES</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'componentes' %}">COMPONENTES</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'listar_ventas' %}">VENTAS</a></li>
                     {% else %}
                         {% if request.user.is_authenticated %}
                         <li class="nav-item"><a class="nav-link" href="{% url 'nuestros_productos' %}">PRODUCTOS</a></li>
