--- a/SitioMain/templates/crystals.html
+++ b/SitioMain/templates/crystals.html
@@ -12,7 +12,7 @@
 </div>
 <br><br>
 {% if productos.count == 0 %}
-<h4>Aún no se han agregado lightsabers.</h4>
+<h4>Aún no se han agregado cristales Kyber.</h4>
 {% else %}
 
 {% for i in productos %}
@@ -29,12 +29,12 @@
    <a href="{% url 'eliminar_crystal' i.nombre i.color %}"><button type="button" class="btn btn-outline-danger">
         Eliminar</button></a>
    
-   <br><br>
+        <br><br><br>
 </div>
 {% endfor %}
 
 {% endif %}
-<br><br>
+<br>
 <a class="btn btn-primary" href="{% url 'crear_crystal' %}" style="margin: 50px 20px;">Agregar</a>
 
 {% endblock MainContent %}
